@@ -34,6 +34,8 @@ version 2.0.0
 	* Full message background colors are now supported
 	* Smooth scrolling when receiving a new message
 	* Themeable mouse-over hyperlink coloring
+	* Attempt to detect the file type of a buddy icon when saving
+	  (Richard Laager)
 
 	Bug fixes:
 	* People using input methods can now use Enter again.
